# oewn-verb-analysis

./: .gitignore  connected_components.py  pyproject.toml  similarities.py  verb_atlas.py
oewn_verb_analysis/: better_protos.py  frames_vs_hyps.py
